--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+a {
+  color: #f4f4f4;
+  text-decoration: none;
+}
