--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;600;700;800;900&display=swap');
 
+*{
+  font-family: 'Rubik';
+}
+
+
 body {
   margin: 0;
   font-family: 'Rubik', 'Segoe UI', 'Roboto';
